--- a/css/menu.css
+++ b/css/menu.css
@@ -12,8 +12,7 @@ ul, ol {
     border-radius: 10px;
     color: black;
     text-decoration: none;
-    margin: 10px;
-    padding: 0px 0px;
+    height: 40px;
     font-family: 'Montserrant', sans-serif;
 }
 .nav li ul{
@@ -28,7 +27,7 @@ ul, ol {
     font-family: 'Montserrant', sans-serif;
     font-size: 15px;
     text-decoration: none;
-    margin: 10px;
+    margin: 5px;
     padding: 7px 15px;
     display: block;
 }
