--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,13 @@
     box-sizing: border-box;
 }
 
+body{
+    background-image: url(../img/fondo\ blanco.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-attachment: fixed;
+}
+
 #fff{
     background-color: white;
     border-radius: 10px;
